--- a/build.xml
+++ b/build.xml
@@ -76,11 +76,6 @@
         <copy todir="${build}/schemas">
             <fileset dir="${src}/schemas"/>
         </copy>
-        <!-- configuration is now stored outside of shibboleth.war
-        <copy todir="${build}/conf">
-            <fileset dir="${src}/conf"/>
-        </copy>
-        -->
     </target>
     
     <target name="compile-tests" depends="compile">
@@ -103,21 +98,7 @@
         </javadoc>
 	</target>
 
-    <!-- Create various product distributions and move them to ${dist} -->
-
-    <target name="dist-all" depends="compile, test-all, package-all, clean-build" />
-	
-    <target name="package-all">
-        <war warfile="${dist}/${distname}.war" webxml="${configroot}/all.xml" basedir="${approot}" update="no" />
-    </target>
-
-    <target name="dist-IdP-SP" depends="compile, package-IdP-SP, clean-build" 
-    	description="Build application from source, create shibboleth.war file for IdP and SP"/>
-    <target name="package-IdP-SP" depends="compile"
-    	description="Create shibboleth.war file from build output and IdP-SP deployment descriptor">
-        <war warfile="${dist}/${distname}.war" webxml="${configroot}/IdP-SP.xml" basedir="${approot}" update="no" />
-    </target>
-
+    <!-- Create WAYF and move it to ${dist} -->
     <target name="dist-wayf" depends="compile, package-wayf, clean-build" />
     <target name="package-wayf">
         <war warfile="${dist}/${distname}-wayf.war" webxml="${configroot}/wayf.xml" basedir="${approot}" update="no" />
@@ -236,7 +217,7 @@
         <if>
             <xinput type="confirm" defaultvalue="y">Do you want to install the Shibboleth Identity Provider?</xinput>
             <then>
-                <input message="What name do you want to use for the web application? [default: ${shib.webapp.name}]" 
+                <input message="What name do you want to use for the Identity Provider web application? [default: ${shib.webapp.name}]" 
                     addproperty="shib.webapp.name.input" defaultValue="${shib.webapp.name}" />
                 <var name="shib.webapp.name" value="${shib.webapp.name.input}" />
 
@@ -246,7 +227,7 @@
     </target>
 
 	<target name="install.idp" depends="init, install.init">
-        <xinput message="Deploying java web application.  Do you want to install it directly onto the filesystem or use the tomcat manager application?" 
+        <xinput message="Deploying the java web application.  Do you want to install it directly onto the filesystem or use the tomcat manager application?" 
             addproperty="idp.install-type.input" type="menu" casesensitive="no" defaultValue="${idp.install-type}">
             <xoption>filesystem</xoption>
             <xoption>manager</xoption>
@@ -257,7 +238,7 @@
     </target>
 
     <target name="install.idp.filesystem" depends="init, install.init, build-util">
-        <input message="Enter Shibboleth install directory [default: ${shib.home}]"
+        <input message="Select an installation base for the Shibboleth Identity Provider [default: ${shib.home}]"
             addproperty="shib.home.input" defaultvalue="${shib.home}" />
         <var name="shib.home" value="${shib.home.input}" />
 
@@ -271,7 +252,7 @@
         <copy file="${dist}/${distname}.war" tofile="${tomcat.home}/webapps/${shib.webapp.name}.war" />
 
         <if>
-            <available file="${shib.home}" />
+			<available file="${shib.home}/etc" />
             <then>
                 <if>
                     <xinput type="confirm">WARNING!! The directory `${shib.home}/etc` already exists.  Do you want to overwrite the existing configuration?</xinput>
