--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,8 @@
 #Mon May 16 09:03:19 CDT 2005
 tomcat.username=manager
-shib.home=/usr/local/shibboleth
+shib.home=/usr/local/shibboleth-idp
 tomcat.password=password
 tomcat.url=http\://localhost\:8080/manager
 tomcat.home=/usr/local/tomcat
+shib.webapp.name=shibboleth-idp
+idp.install-type=filesystem
