Correctly set file permissions on shell scripts.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1560 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -291,6 +291,7 @@
         <copy todir="${shib.home}/bin">
             <fileset dir="bin"/>
         </copy>
+		<chmod dir="${shib.home}/bin" perm="ug+rx" includes="**/*"/>
 
         <mkdir dir="${shib.home}/logs" />
 
